--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
@@ -154,9 +154,11 @@
   <ItemGroup>
     <ClInclude Include="ffmpegnativefun.h" />
     <ClInclude Include="FFmpegReadCameraZ.h" />
+    <ClInclude Include="SDL_LoadImg.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FFmpegReadcamera.cpp" />
+    <ClCompile Include="SDL_LoadImg.cpp" />
     <ClCompile Include="start.cpp" />
     <ClCompile Include="FFmpegReadCameraZ.cpp" />
   </ItemGroup>
