--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="SDL_LoadImg.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ConsoleFFmpegLib.cpp" />
     <ClCompile Include="FFmpegReadcamera.cpp" />
     <ClCompile Include="SDL_LoadImg.cpp" />
     <ClCompile Include="start.cpp" />
