--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
@@ -152,6 +152,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ConsoleFFmpegLib.h" />
     <ClInclude Include="ffmpegnativefun.h" />
     <ClInclude Include="FFmpegReadCameraZ.h" />
     <ClInclude Include="SDL_LoadImg.h" />
