--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="SDL_LoadImg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ConsoleFFmpegLib.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="start.cpp">
