--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ffmpegnativefun.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="FFmpegReadCameraZ.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -39,6 +36,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ConsoleFFmpegLib.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FFmpegStreamer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
