--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
@@ -155,11 +155,13 @@
     <ClInclude Include="ConsoleFFmpegLib.h" />
     <ClInclude Include="FFMpegAudioPlay.h" />
     <ClInclude Include="FFmpegReadCameraZ.h" />
+    <ClInclude Include="PCMTest.h" />
     <ClInclude Include="SDL_LoadImg.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleFFmpegLib.cpp" />
     <ClCompile Include="FFMpegAudioPlay.cpp" />
+    <ClCompile Include="PCMTest.cpp" />
     <ClCompile Include="SDL_LoadImg.cpp" />
     <ClCompile Include="start.cpp" />
     <ClCompile Include="FFmpegReadCameraZ.cpp" />
