--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="FFMpegAudioPlay.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="PCMTest.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="start.cpp">
@@ -42,6 +45,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FFMpegAudioPlay.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="PCMTest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
