--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClInclude Include="ConsoleFFmpegLib.h" />
     <ClInclude Include="FFMpegAudioPlay.h" />
+    <ClInclude Include="FFmpegPushRtmp.h" />
     <ClInclude Include="FFmpegReadCameraZ.h" />
     <ClInclude Include="PCMTest.h" />
     <ClInclude Include="SDL_LoadImg.h" />
@@ -161,6 +162,7 @@
   <ItemGroup>
     <ClCompile Include="ConsoleFFmpegLib.cpp" />
     <ClCompile Include="FFMpegAudioPlay.cpp" />
+    <ClCompile Include="FFmpegPushRtmp.cpp" />
     <ClCompile Include="PCMTest.cpp" />
     <ClCompile Include="SDL_LoadImg.cpp" />
     <ClCompile Include="start.cpp" />
