--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="PCMTest.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="FFmpegPushRtmp.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="start.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="PCMTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FFmpegPushRtmp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
