--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="FFmpegPushRtmp.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MemoryTest.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="start.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FFmpegPushRtmp.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MemoryTest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
