--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="FFmpegEncodeYUV.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="FFmpegEncodePCM.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="start.cpp">
@@ -66,6 +69,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FFmpegEncodeYUV.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FFmpegEncodePCM.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
