--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="FFmpegEncodePCM.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MakeUP_DshowToH264.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="start.cpp">
@@ -72,6 +75,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FFmpegEncodePCM.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MakeUP_DshowToH264.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
