--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="MakeUP_DshowToH264.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MakeUP_DshowToAAC.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="start.cpp">
@@ -78,6 +81,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MakeUP_DshowToH264.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MakeUP_DshowToAAC.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
