--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="FFmpegEncodeYUV.h" />
     <ClInclude Include="FFmpegPushRtmp.h" />
     <ClInclude Include="FFmpegReadCameraZ.h" />
+    <ClInclude Include="MakeUP_DshowToAAC.h" />
     <ClInclude Include="MakeUP_DshowToH264.h" />
     <ClInclude Include="MemoryTest.h" />
     <ClInclude Include="PCMTest.h" />
@@ -169,6 +170,7 @@
     <ClCompile Include="FFmpegEncodePCM.cpp" />
     <ClCompile Include="FFmpegEncodeYUV.cpp" />
     <ClCompile Include="FFmpegPushRtmp.cpp" />
+    <ClCompile Include="MakeUP_DshowToAAC.cpp" />
     <ClCompile Include="MakeUP_DshowToH264.cpp" />
     <ClCompile Include="MemoryTest.cpp" />
     <ClCompile Include="PCMTest.cpp" />
@@ -177,6 +179,5 @@
     <ClCompile Include="FFmpegReadCameraZ.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
