--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ WpfFFmpegCore/bin/
 WpfFFmpegCore/obj/
 *.yuv
 ConsoleFFmpegLib/dll/result_file_microphone_to_aac.flv
+ConsoleFFmpegLib/dll/result_file_microphone_to_aac.aac
+ConsoleFFmpegLib/dll/result_file_camera_to_h264.flv
