--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ WpfFFmpegCore/obj/
 ConsoleFFmpegLib/dll/result_file_microphone_to_aac.flv
 ConsoleFFmpegLib/dll/result_file_microphone_to_aac.aac
 ConsoleFFmpegLib/dll/result_file_camera_to_h264.flv
+ConsoleFFmpegLib/dll/result_file_microphone.pcm
