--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ConsoleFFmpegLib/dll/result_file_microphone_to_aac.flv
 ConsoleFFmpegLib/dll/result_file_microphone_to_aac.aac
 ConsoleFFmpegLib/dll/result_file_camera_to_h264.flv
 ConsoleFFmpegLib/dll/result_file_microphone.pcm
+ConsoleFFmpegLib/dll/result_file_aac.pcm
