--- a/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
+++ b/ConsoleFFmpegLib/ConsoleFFmpegLib.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="MakeUP_DshowToAAC.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="AnalysisAAC.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="start.cpp">
@@ -84,6 +87,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MakeUP_DshowToAAC.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="AnalysisAAC.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
